<resources>
    <string name="app_name">Shopping List</string>
    <string name="action_settings">Settings</string>
    <string name="enter_shop_item_name_here">Item Name</string>
    <string name="done">Done</string>
    <string name="purchased">Purchased?</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="enter_item_description_or_notes_here">Item Description</string>
    <string name="enter_estimated_price">Estimated Price</string>
    <string name="name">Name</string>
    <string name="description">Description...</string>
    <string name="_0_00">0.00</string>
    <string name="currency_symbol">$</string>
    <string name="time_to_shop">Time to Shop!</string>
    <string name="title_activity_scrolling">Shopping List!</string>
    <string name="large_text">Test</string>
    <string name="empty_error">This field cannot be empty!</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="edit_item">Edit Item</string>
    <string name="new_item">New Item</string>
    <string name="runtime_exception">The Activity is not implementing the TodoHandler interface.</string>
    <string name="dollar">$%s</string>
    <string name="fruits">Fruits</string>
    <string name="vegetables">Vegetables</string>
    <string name="meat_and_eggs">Meat and Eggs</string>
    <string name="dairy">Dairy</string>
    <string name="fish">Fish</string>
    <string name="total">Total</string>
    <string name="estimated_costs">Estimated Costs</string>
    <string name="grains">Grains</string>
    <string name="beverages">Beverages</string>
    <string name="alcohol">Alcohol</string>
    <string name="sweets">Sweets</string>
    <string name="cleaning_supplies">Cleaning Supplies</string>
    <string name="other">Other</string>

    <string-array name="categories_array">
        <item>Fruits</item>
        <item>Vegetables</item>
        <item>Meat and Eggs</item>
        <item>Dairy</item>
        <item>Fish</item>
        <item>Grains</item>
        <item>Beverages</item>
        <item>Alcohol</item>
        <item>Sweets</item>
        <item>Cleaning Supplies</item>
        <item>Other</item>
    </string-array>

</resources>
